--- a/config.json
+++ b/config.json
@@ -1,1 +1,17 @@
-{}
+{
+    "tiempo de escala segundos": {"minimo":60,"maximo":300},
+
+    "trabajadores":{"minimo":3, "maximo":13},
+    "platos":{"minimo":15, "maximo":50},
+    "cajeros":{"minimo":1,"maximo":3},
+    "cocineros":{"minimo":1,"maximo":5},
+    "meseros":{"minimo":1,"maximo":5},
+    "mesas":{"minimo":4,"maximo":16},
+    "sillas":{"minimo":4,"maximo":8},
+
+    "tiempo de atencion segundos":{"minimo":3,"maximo":8},
+    "tiempo lavaplatos":{"minimo":3,"maximo":5},
+    "tiempo cocina":{"minimo":8,"maximo":20},
+    "tiempo monchona":{"minimo":6,"maximo":10},
+    
+}   
