--- a/config.json
+++ b/config.json
@@ -1,13 +1,5 @@
 {
-    "tiempo de escala segundos": {"minimo":60,"maximo":300},
-
-    "cajeros":{"minimo":1,"maximo":4},
-    "cocineros":{"minimo":1,"maximo":4},
-    "meseros":{"minimo":1,"maximo":4},
-
-    "platos":{"minimo":15, "maximo":50},
-    "vector_restaurante":{"minimo":10,"max":30},
-
+    "velocidad_continuidad":{"minimo":5,"maximo":20,"intervalo":20},
     "tiempo de atencion segundos":{"minimo":3,"maximo":8},
     "tiempo lavaplatos":{"minimo":3,"maximo":5},
     "tiempo cocina":{"minimo":8,"maximo":20},
