--- a/config.json
+++ b/config.json
@@ -1,6 +1,18 @@
 {
-    "velocidad_continuidad":{"minimo":5,"maximo":20,"intervalo":20},
-    "tiempo de atencion segundos":{"minimo":3,"maximo":8},
+    "minutos simulacion":10,
+    "segundos por minuto":5,
+
+    "clientes por llegar":50,
+    "tiempo entre clientes": 5,
+    "capacidad restaurante": 20,
+
+    "cajeros": 2,
+    "meseros": 4,
+    "lavaplatos": 1,
+    "cocineros": 3,
+    "platos": 20,
+
+    "tiempo en caja":{"minimo":3,"maximo":8},
     "tiempo lavaplatos":{"minimo":3,"maximo":5},
     "tiempo cocina":{"minimo":8,"maximo":20},
     "tiempo monchona":{"minimo":6,"maximo":10},
