Json loaded yay

--- a/config.json
+++ b/config.json
@@ -117,7 +117,7 @@
         "Clotilde Pérez",
         "Roberto Martínez"
     ],
-    "productos": [
+    "comidas": [
         "Hamburguesa clásica",
         "Pizza margarita",
         "Pasta Alfredo",
