--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,5 @@
         "mutex": "cpp",
         "valarray": "cpp"
     },
-    "cmake.sourceDirectory": "/Users/amontero/Desktop/C++/Caso-2-ED/clases/json-develop"
+    "cmake.sourceDirectory": "/Users/amontero/Wizard stuff/C++/Caso-2-ED/clases/json-develop/tests/cmake_fetch_content2"
 }
