--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,10 @@
         "iomanip": "cpp",
         "mutex": "cpp",
         "valarray": "cpp",
-        "__threading_support": "cpp"
+        "__threading_support": "cpp",
+        "__split_buffer": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     },
     "cmake.sourceDirectory": "/Users/amontero/Wizard stuff/C++/Caso-2-ED/clases/json-develop/tests/cmake_fetch_content2"
 }
